New Keras workflow and DANet model. Reformated and changed the dense Keras model. Added a model from pytorch tabular: DANet. Removed unused libraries. Added reticulate conda environment. Updated conda env list.

--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -46,6 +46,7 @@ knitr::opts_chunk$set(
   message = FALSE,
   warning = FALSE
 )
+reticulate::use_condaenv("EIH", required = TRUE)
 project_seed <- params$seed
 set.seed(seed = project_seed)
 
