--- a/Result_template.Rmd
+++ b/Result_template.Rmd
@@ -172,6 +172,18 @@ gandalf_confusion$byClass %>%
   my_table(caption = "<center><strong>Metrics by class</center></strong>", col.names = NULL)
 ```
 
+#### PyTorch Tabular DANET
+
+```{r fig.align='center'}
+# Confusion tables
+danet_confusion$table %>%
+  my_table(caption = "<center><strong>GANDALF NN confusion matrix</center></strong>", row.names = TRUE) %>%
+  kableExtra::column_spec(1, bold = TRUE)
+danet_confusion$overall %>% my_table(caption = "<center><strong>Overall metrics</center></strong>", col.names = NULL)
+danet_confusion$byClass %>%
+  my_table(caption = "<center><strong>Metrics by class</center></strong>", col.names = NULL)
+```
+
 ## Models comparison
 
 ```{r fig.align='center'}
@@ -191,13 +203,13 @@ result_list <-
       xgboost_confusion$byClass[["Precision"]],
       xgboost_confusion$byClass[["Recall"]]
     ),
-    # results_dense = lst(
-    #   dense_confusion$overall[["Accuracy"]],
-    #   dense_confusion$overall[["Kappa"]],
-    #   dense_confusion$byClass[["F1"]],
-    #   dense_confusion$byClass[["Precision"]],
-    #   dense_confusion$byClass[["Recall"]]
-    # ),
+    results_dense = lst(
+      dense_confusion$overall[["Accuracy"]],
+      dense_confusion$overall[["Kappa"]],
+      dense_confusion$byClass[["F1"]],
+      dense_confusion$byClass[["Precision"]],
+      dense_confusion$byClass[["Recall"]]
+    ),
     results_node = lst(
       node_confusion$overall[["Accuracy"]],
       node_confusion$overall[["Kappa"]],
@@ -211,6 +223,13 @@ result_list <-
       gandalf_confusion$byClass[["F1"]],
       gandalf_confusion$byClass[["Precision"]],
       gandalf_confusion$byClass[["Recall"]]
+    ),
+    results_danet = lst(
+      danet_confusion$overall[["Accuracy"]],
+      danet_confusion$overall[["Kappa"]],
+      danet_confusion$byClass[["F1"]],
+      danet_confusion$byClass[["Precision"]],
+      danet_confusion$byClass[["Recall"]]
     )
     
   )
@@ -221,7 +240,7 @@ do.call(rbind, result_list) %>%
                  "F1",
                  "Precision",
                  "Recall")) %>%
-  `rownames<-`(c("LGBM", "XGBoost", "NODE", "GANDALF")) %>%
+  `rownames<-`(c("LGBM", "XGBoost", "Dense NN", "NODE", "GANDALF", "DANET")) %>%
   my_table()
 ```
 
