--- a/Result_template.Rmd
+++ b/Result_template.Rmd
@@ -86,9 +86,8 @@ and a NODE model as neural network approaches.
 
 #### LightGBM
 
-The best LGBM model computed by Optuna has a accuracy of 
-**`r optuna_lgbm_best_accuracy`**. The model computed with the best 
-parameters of this trial has the following metrics:
+The model computed with the best parameters of this trial has the following
+metrics:
 
 ```{r fig.align='center'}
 # Confusion tables
@@ -100,10 +99,12 @@ lgbm_confusion$byClass %>%
   my_table(caption = "<center><strong>Metrics by class</center></strong>", col.names = NULL)
 
 # LGBM parameters
-lgbm_best_params %>%
-  as.data.frame() %>%
-  t() %>%
-  my_table(caption = "<center><strong>Best Optuna parameters</center></strong>")
+# lgbm_params %>%
+#   do.call(what = rbind) %>% 
+#   as.data.frame() %>%
+#   rownames_to_column() %>% 
+#   `colnames<-`(value = c("Parameter", "Value")) %>% 
+#   my_table(caption = "<center><strong>LGBM parameters</center></strong>")
 
 # SHAP plots
 lgbm_shap_plot %>%
@@ -112,9 +113,8 @@ lgbm_shap_plot %>%
 
 #### XGBoost
 
-The best XGboost model computed by Optuna has a accuracy of 
-**`r optuna_xgb_best_accuracy`**. The model computed with the best parameters of
-this trial has the following metrics:
+The model computed with the best parameters of this trial has the following
+metrics:
 
 ```{r fig.align='center'}
 # Confusion tables
@@ -126,10 +126,12 @@ xgboost_confusion$byClass %>%
   my_table(caption = "<center><strong>Metrics by class</center></strong>", col.names = NULL)
 
 # XGBoost parameters
-xgboost_best_params %>%
-  as.data.frame() %>%
-  t() %>%
-  my_table(caption = "<center><strong>Best Optuna parameters</center></strong>")
+# xgboost_params %>%
+#   do.call(what = rbind) %>% 
+#   as.data.frame() %>%
+#   rownames_to_column() %>% 
+#   `colnames<-`(value = c("Parameter", "Value")) %>% 
+#   my_table(caption = "<center><strong>XGBoost parameters</center></strong>")
 
 # SHAP plots
 xgboost_shap_plot %>%
