--- a/EIH_Modeling_Classification.Rmd
+++ b/EIH_Modeling_Classification.Rmd
@@ -84,16 +84,16 @@ predict_label <-
 cluster_number <- 2
 cluster_number_names <- "two"
 ml_split <- 0.8
-optuna_trials <- 3000
-lgbm_rounds <- 150
-xgboost_rounds <- 120
+optuna_trials <- 25000
+lgbm_rounds <- 75
+xgboost_rounds <- 75
 ```
 
 ```{r Import & scripts, include=FALSE}
-# Import selected dataset creating imported_data_names and imported_data
+# Import selected data set creating imported_data_names and imported_data
 data_read()
 
-# Create environments (one per dataset, used for results storage)
+# Create environments (one per data set, used for results storage)
 my_envs <- lapply(X = imported_data_names, FUN = \(df_name) {
   my_name <- df_name
   df_name <- paste0(df_name, "_env") %>%
@@ -105,6 +105,8 @@ my_envs <- lapply(X = imported_data_names, FUN = \(df_name) {
 
 # Source scripts for analysis
 for (df_name in imported_data_names) {
+  dir_create(path = paste0("Models/", df_name))
+  env_name <- as.character(df_name)
   no_num_colnames <- # Columns that will be encoded
     dplyr::select_if(imported_data[[df_name]], negate(is.numeric)) %>%
     colnames()
@@ -112,8 +114,7 @@ for (df_name in imported_data_names) {
                                               "height",
                                               "weight",
                                               "train_years",
-                                              "train_volume",
-                                              "vo2_max")]
+                                              "train_volume")]
   analysis_data <- imported_data[[df_name]] %>%
     df_encode() %$%
     encoded_data %>%
@@ -127,30 +128,10 @@ for (df_name in imported_data_names) {
 }
 ```
 
-# Introduction
+# EIH prediction
 
-It is well known that endurance performances are limited by physiological
-factors among which the cardio-respiratory is one of the most important
-(@amannConvectiveOxygenTransport2008, @bassettLimitingFactorsMaximum2000). This
-system can be limiting through different ways including the limitations of the
-cardiac output (Qc), the oxygen diffusion or the pulmonary perfusion. Those
-limitations can be enhanced by physical training and physiological adaptations
-to exercise. Thus with training we can observe an increased cardiac output,
-pulmonary perfusion or oxygen diffusion through an increased hemoglobin
-concentration.
-
-It's also well known that the environment can impact the oxygen pressures and
-thus the inspired volume. This limitation is also present during
-experimentation, like simulated altitude, during which the inspired fraction of
-oxygen is diminished.
-
-If the cardiac system is one of the most known limiting, the pulmonary system
-can also participated in the observed limitations. This system is complicated
-and the pulmonary anatomy is composed by several "section". A known
-phenomenon impacting athlete's performances is the exercise-induces hypoxaemia
-(EIH) (@raberinHypoxemieInduiteExercice2019). The purpose of this work is to be
-able to classify athletes as EIH or NEIH without using the direct indicator
-(saturation).
+This report shows the classifications achieved using various methods to detect
+EIH subjects.
 
 ```{r Results, echo=FALSE, results='asis'}
 for (my_env in my_envs) {
@@ -165,10 +146,6 @@ The following parameters were used as input to create this report:
 ```{r Infos}
 params %>% do.call(what = rbind, args = .) %>% my_table()
 ```
-
-# References
-
-<div id="refs"></div>
 
 ```{r End_tasks, include=FALSE}
 result_save()
