Updated report format.

--- a/Result_template.Rmd
+++ b/Result_template.Rmd
@@ -109,6 +109,37 @@ lgbm_confusion$byClass %>%
 # SHAP plots
 lgbm_shap_plot %>%
   walk(print)
+# Features tables
+feature_data <- imported_data[[env_name]] %>%
+  as.data.frame() %>%
+  select(c(
+    gsub(
+      "\\.",
+      "/",
+      lgbm_shap_plot$importance_plot$data$feature
+    ),
+    predict_label
+  ))
+
+tab1 <-
+  scipub::FullTable1(data = feature_data,
+                     strata = predict_label,
+                     es_col = FALSE)
+
+my_table(tab1$table) %>%
+  kableExtra::footnote(general = tab1$caption, general_title = "")
+
+describeBy(
+  x = feature_data,
+  group = feature_data[, predict_label],
+  mat = TRUE,
+  digits = 2,
+  IQR = TRUE,
+  quant = c(0.25, 0.5, 0.75),
+  skew = FALSE,
+  ranges = T
+) %>%
+  my_table()
 ```
 
 #### XGBoost
@@ -136,6 +167,38 @@ xgboost_confusion$byClass %>%
 # SHAP plots
 xgboost_shap_plot %>%
   walk(print)
+
+# Features tables
+feature_data <- imported_data[[env_name]] %>%
+  as.data.frame() %>%
+  select(c(
+    gsub(
+      "\\.",
+      "/",
+      xgboost_shap_plot$importance_plot$data$feature
+    ),
+    predict_label
+  ))
+
+tab1 <-
+  scipub::FullTable1(data = feature_data,
+                     strata = predict_label,
+                     es_col = FALSE)
+
+my_table(tab1$table) %>%
+  kableExtra::footnote(general = tab1$caption, general_title = "")
+
+describeBy(
+  x = feature_data,
+  group = feature_data[, predict_label],
+  mat = TRUE,
+  digits = 2,
+  IQR = TRUE,
+  quant = c(0.25, 0.5, 0.75),
+  skew = FALSE,
+  ranges = T
+) %>%
+  my_table()
 ```
 
 #### Keras
